Overflow vertical scrollbar resolved

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body,
   margin: 0;
   height: 100%;
   width: 100%;
+  overflow-y: hidden;
   font-family: "Avenir Next W00", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
